--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences:  ^2.2.2
+  image_picker: ^1.0.4
+  url_launcher: ^6.2.1
+  animations: ^2.0.8
+  flutter_native_splash: ^2.3.5
 
   cupertino_icons: ^1.0.2
 
