--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,3 +58,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  color: "#071b5d"
+  android: true
+  ios: true
+  windows: true
+  web: true
