--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   url_launcher: ^6.2.1
   animations: ^2.0.8
   flutter_native_splash: ^2.3.5
-
+  geolocator: ^10.1.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
