--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,36 +1,50 @@
-name: Dart
-
+name: CI
 on:
-  push:
-    branches: [ "main" ]
+  push: {branches: [master]}
   pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build:
+  analyze:
+    name: "Static analysis"
+
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+    - uses: dart-lang/setup-dart@v1
+    - run: dart --version
+    - run: dart pub get
+    - run: dart analyze --fatal-infos --fatal-warnings .
 
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+  test:
+    name: "Tests | Dart ${{ matrix.dart-channel }} | ${{ matrix.os }}"
 
-      - name: Install dependencies
-        run: dart pub get
+    strategy:
+      matrix:
+        # TODO: Run tests on Windows when dart-lang/pub#2982 is fixed.
+        os: [ubuntu, macos]
+        dart-channel: [stable, dev]
+      fail-fast: false
 
-      - name: Verify formatting
-        run: dart format --output=none --set-exit-if-changed .
+    runs-on: ${{ matrix.os }}-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
+    - uses: dart-lang/setup-dart@v1
+      with:
+        sdk: ${{ matrix.dart-channel }}
+    - run: dart --version
 
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
-      - name: Run tests
-        run: dart test
+    - run: dart pub get
+    - run: dart pub run test -r expanded
+
+  format:
+    name: "Code formatting"
+
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: dart-lang/setup-dart@v1
+    - run: dart --version
+    - run: dart format --fix .
+    - run: git diff --exit-code
