--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,13 +11,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: dart-lang/setup-dart@v1
+      with: 
+        sdk: 3.0
     - uses: subosito/flutter-action@v2
       with:
-        flutter-version: "3.0.0"
+        flutter-version: 3.0.0
 
     - name: Get dependencies
       run: flutter pub get
-
+      
     - run: flutter pub run test
 
     # Runs a set of commands using the runners shell
@@ -31,6 +33,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: dart-lang/setup-dart@v1
+      with: 
+        sdk: 3.0
     - run: dart --version
     - run: dart format --fix .
     - run: git diff --exit-code
