--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.0'
 
+# TODO-TD: cut away un needed dependencies
 dependencies:
   flutter:
     sdk: flutter
@@ -18,6 +19,7 @@ dependencies:
   flutter_native_splash: ^2.3.5
   geolocator: ^9.0.0
   cupertino_icons: ^1.0.2
+  provider: ^6.0.3
   ar_flutter_plugin: ^0.7.3
 
 dev_dependencies:
