--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,15 @@ dependencies:
     sdk: flutter
   shared_preferences:  ^2.2.2
   camera: ^0.10.5
+  geolocator: ^9.0.0
+  provider: ^6.0.3
+  flutter_osm_plugin: ^0.70.3
+  # Needed ^
+  # Not v
   url_launcher: ^6.2.1
   animations: ^2.0.8
   flutter_native_splash: ^2.3.5
-  geolocator: ^9.0.0
   cupertino_icons: ^1.0.2
-  provider: ^6.0.3
-  ar_flutter_plugin: ^0.7.3
 
 dev_dependencies:
   flutter_test:
