--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,6 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.0.0'
 
-# TODO-TD: cut away un needed dependencies
 dependencies:
   flutter:
     sdk: flutter
@@ -16,14 +15,14 @@ dependencies:
   camera: ^0.10.5
   geolocator: ^9.0.0
   provider: ^6.0.3
+  http: ^1.1.0
+  url_launcher: ^6.2.1
   flutter_osm_plugin: ^0.70.3
+  flutter_launcher_icons: "^0.13.0"
+  flutter_native_splash: ^2.3.5
   # Needed ^
   # Not v
-  url_launcher: ^6.2.1
   animations: ^2.0.8
-  flutter_native_splash: ^2.3.5
-  cupertino_icons: ^1.0.2
-  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -42,32 +41,15 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
-
 flutter_native_splash:
   color: "#071b5d"
   android: true
   ios: true
   windows: true
   web: true
+
+flutter_launcher_icons:
+  image_path: "icon/LogoMk1.png" 
+  android: true
+  ios: true
+  remove_alpha_ios: true
