--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,11 @@ dependencies:
   provider: ^6.0.3
   http: ^1.1.0
   url_launcher: ^6.2.1
-  flutter_osm_plugin: ^0.70.3
-  flutter_launcher_icons: "^0.13.0"
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  flutter_launcher_icons: ^0.13.0
   flutter_native_splash: ^2.3.5
-  # Needed ^
-  # Not v
-  animations: ^2.0.8
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
