--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,18 @@ dependencies:
   flutter_launcher_icons: ^0.13.0
   flutter_native_splash: ^2.3.5
   share_plus: ^7.2.1
+  rust_builder:
+    path: rust_builder
+  flutter_rust_bridge: 2.0.0-dev.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  ffigen: 8.0.2
+  integration_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
