--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   geolocator: ^9.0.0
   provider: ^6.0.3
   http: ^1.1.0
+  image: ^4.1.3
   url_launcher: ^6.2.1
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
