--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter 
   shared_preferences:  ^2.2.2
   camera: ^0.10.5
-  geolocator: ^9.0.0
+  geolocator: ^10.1.0
   provider: ^6.0.3
   http: ^1.1.0
   image: ^4.1.3
@@ -23,15 +23,17 @@ dependencies:
   flutter_launcher_icons: ^0.13.0
   flutter_native_splash: ^2.3.5
   share_plus: ^7.2.1
-  rust_builder:
-    path: rust_builder
-  flutter_rust_bridge: 2.0.0-dev.4
+  flutter_cache_manager: ^3.3.1
+  path_provider: ^2.1.1
+  # rust_builder:
+  #   path: rust_builder
+  # flutter_rust_bridge: 2.0.0-dev.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   ffigen: 8.0.2
   integration_test:
     sdk: flutter
