--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   share_plus: ^7.2.1
   flutter_cache_manager: ^3.3.1
   path_provider: ^2.1.1
+  vector_math: ^2.1.4
   # rust_builder:
   #   path: rust_builder
   # flutter_rust_bridge: 2.0.0-dev.4
@@ -39,6 +40,9 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  assets: 
+  - lib/map.png
+
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
